--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - '5432:5432'
     volumes:
       - psql_db:/var/lib/postgresql/data
+  redis:
+    image: redis:3.2-alpine
 volumes:
   psql_db:
     driver: local
