LP-26 add example in brackets to .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ DATABASE_HOST=database_host
 DATABASE_PORT=database_port
 RAILS_MAX_THREADS=number_of_threads
 SECRET_KEY_BASE=your_secret_key_base (run 'rake secret' in terminal to get it)
-REDIS_CACHE_URL=your_redis_cache_url
+REDIS_CACHE_URL=your_redis_cache_url (for example, "redis://localhost:6379/0")
