--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: ruby
 rvm:
   - 2.6.3
+services:
+  - docker
+before_install:
+  - docker build -t lp_todo .
+  - docker run -d -p 127.0.0.1:80:4567 lp_todo /bin/sh -c "cd /app; bundle exec foreman start;"
+  - docker ps -a
+  - docker run lp_todo /bin/sh -c "cd /app; bundle exec rake test"
 script:
   - bundle install - jobs=3 - retry=3
   - bundle exec rake db:create
