LP-7 Finalize Travis CI setup

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,10 @@ AllCops:
     - 'vendor/**/*'
     - 'log/**/*'
     - 'tmp/**/*'
+    - 'db/schema.rb'
+
+Metrics/BlockLength:
+  Max: 30
 
 Style/Documentation:
   Enabled: false
