--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
+sudo: false
+cache: bundler
 language: ruby
 rvm:
   - 2.6.3
+before_install:
+  - gem update --remote bundler
+install:
+  - bundle install --retry=3
 script:
-  - bundle install - jobs=3 - retry=3
-  - bundle exec rake db:create
-  - bundle exec rake db:migrate
   - bundle exec rspec
+  - bundle exec rubocop
