--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - docker
 before_install:
   - docker build -t lp_todo .
-  - docker run -d -p 127.0.0.1:80:4567 lp_todo /bin/sh -c "cd /app; bundle exec foreman start;"
+  - docker run -d -p 127.0.0.1:80:4567 lp_todo /bin/sh -c "cd /app; bundle exec foreman start; gem install bundler:2.0.2"
   - docker ps -a
   - docker run lp_todo /bin/sh -c "cd /app; bundle exec rake test"
 script:
