--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,12 @@ rvm:
 services:
   - docker
 before_install:
-  - docker-compose build
-  - docker-compose run todo_web bash -c "bundle exec foreman start;"
-  # - docker run -d -p 127.0.0.1:80:4567 lp_todo /bin/sh -c "cd /app; bundle exec foreman start;"
-  # - docker ps -a
-  - docker-compose run todo_web bash -c "bundle exec rake db:create db:migrate;"
+  # - docker-compose build
+  - docker build -t lp_todo .
+  # - docker-compose run todo_web bash -c "bundle exec foreman start;"
+  - docker run -d -p 127.0.0.1:80:4567 lp_todo bash -c "cd /app; bundle exec foreman start;"
+  - docker ps -a
+  - docker run lp_todo bash -c "cd /app; bundle exec rspec"
+  # - docker-compose run todo_web bash -c "bundle exec rake db:create db:migrate;"
 script:
-  - docker-compose run todo_web bash -c "bundle exec rspec;"
+  # - docker-compose run todo_web bash -c "bundle exec rspec;"
