--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   # - docker-compose run todo_web bash -c "bundle exec foreman start;"
   - docker run -d -p 127.0.0.1:80:4567 lp_todo bash -c "cd /app; bundle exec foreman start;"
   - docker ps -a
-  - docker run lp_todo bash -c "cd /app; bundle exec rspec"
+  - docker run lp_todo bash -c "cd /app; rspec"
   # - docker-compose run todo_web bash -c "bundle exec rake db:create db:migrate;"
 script:
   # - docker-compose run todo_web bash -c "bundle exec rspec;"
