--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,5 @@ before_install: gem update --remote bundler
 install:
   - bundle install --retry=3
 script:
-  - bundle exec rake test
+  - bundle exec rspec
   - bundle exec rubocop
