LP-72 fix docker and database rewrite Dockerfile and docker-compose.yml edit .env.example and database.yml

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-LP_TODO_DATABASE_USERNAME=database_role_username
-LP_TODO_DATABASE_PASSWORD=database_role_password
-DATABASE_HOST=database_host
-DATABASE_PORT=database_port
+DATABASE_USER=postgres_user
+DATABASE_PASSWORD=password
+DATABASE_HOST=db_host (ex. localhost)
+DATABASE_PORT=db_port (ex. 5432)
 RAILS_MAX_THREADS=number_of_threads
-SECRET_KEY_BASE=your_secret_key_base (run 'rake secret' in terminal to get it)
+SECRET_KEY_BASE=your_secret_key_base (run 'rake secret' in terminal to generate)
 REDIS_CACHE_URL=your_redis_cache_url (for example, "redis://localhost:6379/0")
