--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
   todo_web:
     build: .
     command: rails s -p 3000 -b '0.0.0.0'
+    tty: true
+    stdin_open: true
     volumes:
       - .:/app
     ports:
