--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,17 @@ cache: bundler
 language: ruby
 rvm:
   - 2.6.3
+env:
+  - DOCKER_COMPOSE_VERSION=1.21.0
 before_install:
+  - rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - mv docker-compose /usr/local/bin
   - gem update --remote bundler
 install:
-  - bundle install --retry=3
+  - bundle install --jobs=3 --retry=3
+  - docker-compose run todo_web bash
 script:
-  - bundle exec rspec
-  - bundle exec rubocop
+  - rspec
+  - rubocop
